k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-task-api-service

spec:
  selector:
    app: cloud-task-api

  ports:
  - port: 80
    targetPort: 8000

  type: NodePort
